// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ServiceGroups > matches snapshot with default props 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mod-entities "
    >
      <section
        class="entities-search"
      >
        <h2>
          Application groups (0)
        </h2>
        <div
          class="search-filters serviceGroups-search-filters"
        />
        <div
          class="search "
        >
          <div
            class="sds--text-field sds--text-field--has-icon"
          >
            <div
              class="sds--text-field--shape"
            >
              <div
                class="sds--text-field--input-and-icon"
              >
                <input
                  class="sds--text-field--input"
                  placeholder="Search for application groups..."
                  type="search"
                  value=""
                />
                <span
                  class="sds--text-field--icon"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.4 18.2c4.6-2 6.8-7.3 4.8-11.9S10.9-.5 6.3 1.5-.5 8.8 1.5 13.4c1.9 4.6 7.3 6.7 11.9 4.8zm2.8-2l7 7"
                      fill="none"
                      stroke="#000"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="new-button"
        >
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Add application group
            </span>
          </button>
        </div>
      </section>
      <section
        class="entities-list"
      />
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ServiceGroups matches snapshot with default props 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mod-entities "
    >
      <section
        class="entities-search"
      >
        <h2>
          Application groups (0)
        </h2>
        <div
          class="search-filters serviceGroups-search-filters"
        />
        <div
          class="search "
        >
          <div
            class="sds--text-field sds--text-field--has-icon"
          >
            <div
              class="sds--text-field--shape"
            >
              <div
                class="sds--text-field--input-and-icon"
              >
                <input
                  class="sds--text-field--input"
                  placeholder="Search for application groups..."
                  type="search"
                  value=""
                />
                <span
                  class="sds--text-field--icon"
                >
                  <svg>
                    search.svg
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="new-button"
        >
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Add application group
            </span>
          </button>
        </div>
      </section>
      <section
        class="entities-list"
      />
      <div />
    </div>
  </div>
</DocumentFragment>
`;
